<resources>
    <string name="app_name">GokonSeki</string>
    <string name="three_text">"3 対 3 "</string>
    <string name="back_text">戻る</string>
    <string name="next_text">決まったら押してね🎵</string>
    <string name="blank_text">？？？</string>
    <string name="brank2">？？？</string>
    <string name="brank3">？？？</string>
    <string name="open1">open</string>
    <string name="open2">open</string>
    <string name="open3">open</string>
    <string name="brank4">？？？</string>
    <string name="open4">open</string>
    <string name="brank5">？？？</string>
    <string name="open5">open</string>
    <string name="brank6">？？？</string>
    <string name="open6">open</string>
    <string name="four_text">4 対 4</string>
    <string name="sample">今夜は山田</string>
    <string name="sub">（OPENボタンで開封）</string>
    <string name="manBtext">？？？</string>
    <string name="womanCtext">？？？</string>
    <string name="finish">戻る</string>
    <string name="five_text">5 対 5</string>
    <string name="message">今回の人数は…</string>
    <string name="intro">合コン席替えアプリ！</string>
    <string name="start">席替えを開始</string>
    <string name="startApp">席替え開始</string>
    <string name="explain">このアプリでは、合コンなどで</string>
    <string name="explain2">ランダムに席替えを行うことができます。</string>
    <string name="explain3">男女交互に座るように</string>
    <string name="title">合コン席替えアプリ！</string>
    <string name="Buttontext">open</string>
    <string name="blankW5">？？？</string>
    <string name="openW5">open</string>
    <string name="newBlank">？？？</string>
    <string name="blank">？？？</string>
    <string name="blank1">？？？</string>
</resources>
